@@ -18,15 +18,15 @@
 
 [Abiram] some kind of jail system @coords: -10000,120,-10000 , so nobody will have issues with this jailbuilding thing xD
 
-* When you report players (using /report) it is logged in a .txt file in the MBessentials directory, so server owners can
+[AAAA] When you report players (using /report) it is logged in a .txt file in the MBessentials directory, so server owners can
   find it easily!
 
-* More api stuff - not quite sure what, but it will make our plugin more popular if we have a bigger api! I am currently
+[AAAA] More api stuff - not quite sure what, but it will make our plugin more popular if we have a bigger api! I am currently
   trying to understand how it works, so I will start contributing as soon as possible!
   
-* Built in custom command support - AAAA you could just use the plugin you already made!
+ * Built in custom command support - AAAA you could just use the plugin you already made!
 
-* Autoupdater - I will provide with D/L links as soon as possible, as the website is under contruction
+[AAAA]Autoupdater - I will provide with D/L links as soon as possible, as the website is under contruction - 
 
 Any other ideas? - mushy
 
