@@ -84,3 +84,5 @@
         but whant to make it harder than just teleporting. Then a bit of "old school" navigation is requried! :)
        
 [mushy] Added some extra debug info on server shutdown
+
+[AAAA] Added the config file reader so you can disable/enable any feature you want.
